[gd_scene load_steps=4 format=3 uid="uid://ybnrb2sa4r6q"]

[ext_resource type="Script" uid="uid://r4kgwh2qn6ha" path="res://player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://cpvi204vmb5m6" path="res://lo_fi_magic_temp_character.tscn" id="2_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]
height = 1.7299805

[node name="Player" type="RigidBody3D"]
lock_rotation = true
script = ExtResource("1_4flbx")

[node name="LoFi_Magic_Temp_Character" parent="." instance=ExtResource("2_onrkg")]
transform = Transform3D(-0.9989516, 0, -0.04578142, 0, 1, 0, 0.04578142, 0, -0.9989516, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8425293, 0)
shape = SubResource("CapsuleShape3D_onrkg")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(0.99800915, -0.010951851, 0.062110987, 0.010951849, 0.99993974, 0.00034044683, -0.06211097, 0.00034046173, 0.9980689, 0, 0.42894644, 2.6962624)
